--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,17 +8,6 @@
     android:background="@drawable/gradientbackground"
     tools:context="com.example.if26new.SettingActivity">
 
-    <fragment
-        android:id="@+id/fragmentForColor"
-        android:name="com.example.if26new.MainFragment"
-        android:layout_width="183dp"
-        android:layout_height="234dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.967" />
-
     <ImageButton
         android:id="@+id/returnMainMenu"
         android:layout_width="wrap_content"
@@ -54,9 +43,10 @@
         android:textSize="15dp"
         app:layout_constraintBottom_toTopOf="@+id/applyColorChange"
         app:layout_constraintEnd_toStartOf="@+id/hexadecimalForButtonColor"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toEndOf="@+id/hexadecimalForStartColor"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.964" />
+        app:layout_constraintTop_toBottomOf="@+id/colorTab"
+        app:layout_constraintVertical_bias="0.844" />
 
     <Button
         android:id="@+id/endButton"
@@ -66,35 +56,38 @@
         android:text="End Button"
         app:layout_constraintBottom_toTopOf="@+id/hexadecimalForStopColor"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.012"
+        app:layout_constraintHorizontal_bias="0.122"
         app:layout_constraintStart_toEndOf="@+id/startButton"
         app:layout_constraintTop_toBottomOf="@+id/colorTab"
-        app:layout_constraintVertical_bias="0.647" />
+        app:layout_constraintVertical_bias="0.642" />
 
     <EditText
         android:id="@+id/hexadecimalForStartColor"
-        android:layout_width="96dp"
+        android:layout_width="98dp"
         android:layout_height="40dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="12dp"
         android:ems="10"
         android:hint="Hexadecimal"
         android:inputType="textPersonName"
         android:textSize="15dp"
         app:layout_constraintBottom_toTopOf="@+id/applyColorChange"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.101"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/colorTab"
+        app:layout_constraintVertical_bias="0.844" />
 
     <Button
         android:id="@+id/startButton"
         android:layout_width="108dp"
         android:layout_height="31dp"
-        android:layout_marginStart="16dp"
         android:background="@drawable/roundbutton"
         android:text="Start Color"
         app:layout_constraintBottom_toTopOf="@+id/hexadecimalForStartColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.092"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/colorTab"
-        app:layout_constraintVertical_bias="0.645" />
+        app:layout_constraintVertical_bias="0.647" />
 
     <Button
         android:id="@+id/colorbutton"
@@ -113,15 +106,16 @@
         android:id="@+id/hexadecimalForButtonColor"
         android:layout_width="98dp"
         android:layout_height="40dp"
-        android:layout_marginEnd="28dp"
         android:ems="10"
         android:hint="Hexadecimal"
         android:inputType="textPersonName"
         android:textSize="15dp"
         app:layout_constraintBottom_toTopOf="@+id/applyColorChange"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.968" />
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/colorTab"
+        app:layout_constraintVertical_bias="0.844" />
 
     <Button
         android:id="@+id/applyColorChange"
@@ -137,15 +131,15 @@
 
     <ImageView
         android:id="@+id/colorTab"
-        android:layout_width="350dp"
-        android:layout_height="225dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="380dp"
+        android:layout_height="218dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.524"
+        app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.037"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/palette_color" />
 
     <TextView
@@ -159,6 +153,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/logOutBtn"
+        android:layout_width="108dp"
+        android:layout_height="31dp"
+        android:text="Log Out"
+        android:background="@drawable/roundbutton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.179"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/applyColorChange"
+        app:layout_constraintVertical_bias="0.235" />
+
+    <Button
+        android:id="@+id/defaultColor"
+        android:layout_width="108dp"
+        android:layout_height="31dp"
+        android:text="Default Color"
+        android:background="@drawable/roundbutton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.729"
+        app:layout_constraintStart_toEndOf="@+id/logOutBtn"
+        app:layout_constraintTop_toBottomOf="@+id/applyColorChange"
+        app:layout_constraintVertical_bias="0.235" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
