--- a/app/src/main/res/layout/erase_playlist_pop_up.xml
+++ b/app/src/main/res/layout/erase_playlist_pop_up.xml
@@ -9,6 +9,7 @@
     android:layout_gravity="center">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintErasePlaylist"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
