finger print add

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,18 +101,6 @@
             app:layout_constraintTop_toBottomOf="@+id/enterPassword"
             app:layout_constraintVertical_bias="0.186" />
 
-        <TextView
-            android:id="@+id/informationAccount"
-            android:layout_width="210dp"
-            android:layout_height="70dp"
-            android:text=""
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/connexion"
-            app:layout_constraintVertical_bias="0.27" />
-
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="291dp"
@@ -123,6 +111,30 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/logo" />
+
+        <ImageView
+            android:id="@+id/biometricImage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.469"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/connexion"
+            app:layout_constraintVertical_bias="0.312"
+            app:srcCompat="@drawable/fingerprint" />
+
+        <TextView
+            android:id="@+id/biometricText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Use your finger print to log in"
+            android:textSize="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/biometricImage"
+            app:layout_constraintVertical_bias="0.256" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
